@@ -20,6 +20,7 @@ before_install:
     libgfs-dev
     libgts-dev
     libcunit1-dev
+    python3
   - sudo -H pip install cpp-coveralls
   - autoconf
   - autoheader
