@@ -14,6 +14,12 @@
 	of curvature used in the dynamic.
       </para>
     </listitem>
+
+    <listitem>
+      <para>
+	The <command>sag2grd</command> utility rewritten in Python.
+      </para>
+    </listitem>
   </itemizedlist>
 
   </section>
